--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow-sm">
-                                <img src="/uploads/2020/12/dining-table-4462069_640_0_1608742409.png">
+                                <img src="https://akordmebli.com.ua/Media/shop-14308/krislo-monako-60106971296561.jpg">
                                 <div class="card-body">
                                 <p class="card-text">меблі є у кожного дома вони теж дуже корисні </p>
                                 <div class="d-flex justify-content-between align-items-center">
